[project]
name = 'pyconcrete'
description = 'Protect your python script, encrypt .pyc to .pye and decrypt when import it'
version = '0.15.2'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
  {name = 'Falldog', email = 'falldog7@gmail.com'},
]

[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'meson >= 1.1.0',
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120
